src/objects/Order.object
<CustomObject>
    <fields>
        <fullName>Abbreviated_Name__c</fullName>
        <description>Concatenate the shipping contact name</description>
        <formula>IF( NOT( ISBLANK( ShipToContact.LastName  &amp; ShipToContact.FirstName)), LEFT(ShipToContact.LastName  &amp;  &apos;, &apos; &amp; ShipToContact.FirstName, 30),   null  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Abbreviated Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_After_Date__c</fullName>
        <description>Date the Order&apos;s line items with a Back Order status will be cancelled</description>
        <label>Cancel After Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Category1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ChargeCode__c</fullName>
        <description>Code that is taken from user record</description>
        <label>Historical Charge Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Main contact referenced to on order (if applicable)</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Order Notes_old</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Division_ID__c</fullName>
        <description>Division ID is the last two characters of CompanyAuthorizedBy.Sales_force__c</description>
        <formula>IF(NOT(ISBLANK(TEXT(CompanyAuthorizedBy.Sales_Force__c))), RIGHT(TEXT(CompanyAuthorizedBy.Sales_Force__c), 2), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Ship_Before_Date__c</fullName>
        <description>The Date the Order will be sent to the warehouse for fulfillment</description>
        <label>Do Not Ship Before Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Editable_Create_Date__c</fullName>
        <description>Editable created date for order&apos;s legacy creation date.</description>
        <label>Editable Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Order_Number__c</fullName>
        <displayFormat>Order-{0000000000}</displayFormat>
        <label>External Order Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Legacy_Order_Number__c</fullName>
        <inlineHelpText>Field used to populate the legacy order number</inlineHelpText>
        <label>Legacy Order #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Address_Type__c</fullName>
        <label>Order Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Notes__c</fullName>
        <label>Order Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <formula>IF(NOT(ISBLANK(  Legacy_Order_Number__c  )),  Legacy_Order_Number__c ,  OrderNumber )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordered_Item_Rollup__c</fullName>
        <description>Rollup summary of the number of order items that shows on the order header</description>
        <label>Ordered Item Rollup</label>
        <summarizedField>OrderItem.OrderedQuantity__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Override_Delivery_Address_Line1__c</fullName>
        <description>Address Line 1 of the Order&apos;s Override Address. Override Address for an Order will be populated when the Sample is not being shipped to the Order&apos;s Account&apos;s Shipping Address</description>
        <label>Override Delivery Address Line1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Override_Delivery_Address_Line2__c</fullName>
        <description>Address Line 2 of the Order&apos;s Override Address. Override Address for an Order will be populated when the Sample is not being shipped to the Order&apos;s Account&apos;s Shipping Address</description>
        <label>Override Delivery Address Line2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Override_Delivery_Address_Line3__c</fullName>
        <description>Address Line 3 of the Order&apos;s Override Address . Override Address for an Order will be populated when the Sample is not being shipped to the Order&apos;s Account&apos;s Shipping Address</description>
        <label>Override Delivery Address Line3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Override_Delivery_City__c</fullName>
        <description>The City of the Order&apos;s Override Address&apos;s. Override Address for an Order will be populated when the Sample is not being shipped to the Order&apos;s Account&apos;s Shipping Address</description>
        <label>Override Delivery City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Delivery_Country__c</fullName>
        <description>The Country of the Order&apos;s Override Address&apos;s. Override Address for an Order will be populated when the Sample is not being shipped to the Order&apos;s Account&apos;s Shipping Address</description>
        <label>Override Delivery Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Delivery_Postal_Code__c</fullName>
        <description>The Postal Code of the Order&apos;s Override Address&apos;s. Override Address for an Order will be populated when the Sample is not being shipped to the Order&apos;s Account&apos;s Shipping Address</description>
        <label>Override Delivery Postal Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Delivery_State__c</fullName>
        <description>The State of the Order&apos;s Override Address&apos;s. Override Address for an Order will be populated when the Sample is not being shipped to the Order&apos;s Account&apos;s Shipping Address</description>
        <label>Override Delivery State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Schedule_Delivery_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Entered in the order and put in a future ship date, and check box when the customer requests it earlier</description>
        <label>Override Schedule Delivery Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POBox_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Order&apos;s override address is a PO Box address.</description>
        <label>POBox Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Packing_Instructions__c</fullName>
        <description>Instructions for the warehouse concerning packing of the order (i.e. minimize number of boxes)</description>
        <label>Packing Instructions</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PublisherDivisionID__c</fullName>
        <description>Publisher division that is pulled from user record</description>
        <label>Publisher Division ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rush_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Order needs to be routed to the warehouse for fulfillment in the Priority Order Pick List</description>
        <label>Rush Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_Instructions__c</fullName>
        <description>Instructions passed to the order shipping carrier (appears on the shipping label for UPS, Fedex, USPS) - ex. Leave at front/back door</description>
        <label>Shipping Instructions</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Order type</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isTemporary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Davi Borges 13072015 - This is a hidden field that is used to indicate that the order is temporary. This field will not be necessary when we move to a solution that does not require the creation of &quot;cancelled&quot; orders.</description>
        <label>isTemporary</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>5/30/2015 12:00 AM</value>
        </filters>
        <label>All Orders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Orders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <filterScope>Mine</filterScope>
        <label>My Orders</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Prevent_Change_of_Record</fullName>
        <active>false</active>
        <description>This is used to prevent change of record except for Status Field</description>
        <errorConditionFormula>AND(! ISNEW(), OR(ISCHANGED(Order_Number__c),ISCHANGED(Type),ISCHANGED( AccountId),ISCHANGED(Contact__c),ISCHANGED(PublisherDivisionID__c),ISCHANGED(Description),ISCHANGED(Packing_Instructions__c),ISCHANGED(Override_Delivery_Address_Line1__c),ISCHANGED(Override_Delivery_Address_Line2__c),ISCHANGED(Override_Delivery_Address_Line3__c),ISCHANGED(Override_Delivery_Address_Line4__c),ISCHANGED(Override_Delivery_City__c),ISCHANGED(Override_Delivery_Country__c),ISCHANGED(Override_Delivery_Postal_Code__c),ISCHANGED(Override_Delivery_State__c),ISCHANGED(Cancel_After_Date__c),ISCHANGED(Do_Not_Ship_Before_Date__c),ISCHANGED(Do_Not_Ship_Before_Date__c),ISCHANGED(POBox_Indicator__c),ISCHANGED(POBox_Indicator__c),ISCHANGED(POBox_Indicator__c),ISCHANGED(Override_Delivery_State__c),ISCHANGED(POBox_Indicator__c),ISCHANGED(Rush_Flag__c)))</errorConditionFormula>
        <errorMessage>You are only allowed to change the Status Field</errorMessage>
    </validationRules>
</CustomObject>